package com.butel.data.analyses.mode.protocol;

/**
 * Created by ninghf on 2018/1/24.
 */
public enum ProtocolType {
    TCP, UDP, HTTP
}
